<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="match_parent"
    android:layout_height="wrap_content"
    android:background="@color/white"
    android:orientation="vertical">

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginTop="6dp"
        android:gravity="center_vertical"
        android:paddingHorizontal="8dp"
        android:paddingVertical="4dp">

        <TextView
            android:layout_width="120dp"
            android:layout_height="wrap_content"
            android:layout_marginEnd="8dp"
            android:text="@string/nama_barang"
            android:textColor="@color/primary_text"
            android:textSize="16sp" />

        <TextView
            android:id="@+id/textNamaBarang"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:background="@drawable/background_text_input_rounded"
            android:textSize="16sp" />

    </LinearLayout>

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:gravity="center_vertical"
        android:paddingHorizontal="8dp"
        android:paddingVertical="4dp">

        <TextView
            android:layout_width="120dp"
            android:layout_height="wrap_content"
            android:layout_marginEnd="8dp"
            android:text="@string/harga_barang"
            android:textColor="@color/primary_text"
            android:textSize="16sp" />

        <TextView
            android:id="@+id/textHarga"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:background="@drawable/background_text_input_rounded"
            android:textAlignment="viewEnd"
            android:textSize="16sp" />

    </LinearLayout>

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:gravity="center_vertical"
        android:paddingHorizontal="8dp"
        android:paddingVertical="4dp">

        <TextView
            android:layout_width="120dp"
            android:layout_height="wrap_content"
            android:layout_marginEnd="8dp"
            android:text="@string/kuantitas"
            android:textColor="@color/primary_text"
            android:textSize="16sp" />

        <TextView
            android:id="@+id/textQty"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:background="@drawable/background_text_input_rounded"
            android:textAlignment="viewEnd"
            android:textSize="16sp" />

    </LinearLayout>

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginHorizontal="8dp"
        android:gravity="end"
        android:orientation="horizontal">

        <Button
            android:id="@+id/buttonEdit"
            style="@style/Widget.AppCompat.Button.Colored"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:backgroundTint="@color/blue"
            android:text="@string/edit" />

        <Button
            android:id="@+id/buttonRemove"
            style="@style/Widget.AppCompat.Button.Colored"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:backgroundTint="@color/red"
            android:text="@string/hapus" />

    </LinearLayout>

    <View
        android:layout_width="match_parent"
        android:layout_height="1dp"
        android:layout_marginTop="6dp"
        android:background="@color/divider" />

</LinearLayout>