<?xml version="1.0" encoding="utf-8"?>
<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:orientation="vertical">

    <androidx.core.widget.NestedScrollView
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_above="@id/layoutTotal"
        android:layout_alignParentStart="true"
        android:layout_alignParentTop="true">

        <LinearLayout
            android:id="@+id/layoutItemList"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:orientation="vertical" />

    </androidx.core.widget.NestedScrollView>

    <LinearLayout
        android:id="@+id/layoutTotal"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_alignParentStart="true"
        android:layout_alignParentBottom="true"
        android:orientation="vertical"
        android:paddingHorizontal="12dp"
        android:paddingVertical="6dp">

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:gravity="center_vertical">

            <TextView
                android:layout_width="100dp"
                android:layout_height="wrap_content"
                android:layout_marginEnd="8dp"
                android:text="@string/banyak_cicilan"
                android:textColor="@color/primary_text"
                android:textSize="15sp" />

            <EditText
                android:id="@+id/textInvoiceSize"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:autofillHints="NONE"
                android:background="@drawable/background_text_input_rounded"
                android:inputType="number"
                android:textAlignment="viewEnd"
                android:textSize="14sp"
                tools:ignore="LabelFor" />

        </LinearLayout>

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginTop="6dp"
            android:gravity="center_vertical">

            <TextView
                android:layout_width="100dp"
                android:layout_height="wrap_content"
                android:layout_marginEnd="8dp"
                android:text="@string/ongkir"
                android:textColor="@color/primary_text"
                android:textSize="15sp" />

            <EditText
                android:id="@+id/textOngkir"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:autofillHints="NONE"
                android:background="@drawable/background_text_input_rounded"
                android:inputType="number"
                android:textAlignment="viewEnd"
                android:textSize="14sp"
                tools:ignore="LabelFor" />

        </LinearLayout>

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="0dp"
            android:layout_marginTop="6dp"
            android:layout_weight="1"
            android:gravity="center_vertical|end"
            android:orientation="horizontal">

            <TextView
                android:id="@+id/textTotal"
                android:layout_width="0dp"
                android:layout_height="wrap_content"
                android:layout_marginEnd="8dp"
                android:layout_weight="1"
                android:textColor="@color/colorAccent"
                android:textSize="18sp"
                android:textStyle="bold"
                tools:ignore="NestedWeights" />

            <Button
                android:id="@+id/buttonGenerate"
                style="@style/Widget.AppCompat.Button.Colored"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="@string/buat_invoice" />

        </LinearLayout>

    </LinearLayout>


</RelativeLayout>